2008-05-10  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c: (dladdr):
	replace all the '\' by '/' in the filename found by dladdr

2008-04-28  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c: (evil_getcwd):
	add getcwd-like function

	* src/lib/dlfcn/dlfcn.c: (dladdr):
	* src/lib/dlfcn/dlfcn.h:
	add dladdr-like function. Formatting
	Remove unused define

	* src/lib/mman/sys/mman.h:
	remove unused define

2008-04-26  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/Makefile.am:
	* src/lib/dlfcn/Makefile.am:
	* src/lib/dlfcn/dlfcn.c: (get_last_error), (dlopen), (dlsym):
	* src/lib/evil.c: (evil_char_to_wchar), (evil_wchar_to_char):
	make char <--> wchar_t conversion functions public

	* src/lib/mman/Makefile.am:
	add cegcc flags

	* src/lib/mman/mman.c:
	move include

2008-04-23  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/bin/Makefile.am:
	* src/lib/Makefile.am:
	* src/lib/dlfcn/Makefile.am:
	* src/lib/mman/Makefile.am:
	use -Wl,--enable-auto-import with cegcc
	fix warning with newest autoconf

	* src/lib/dlfcn/dlfcn.c: (string_to_wchar):
	include wchar.h and fix warnings

	* src/lib/mman/mman.c:
	use relative path to include sys/mman.h

2008-03-28  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	remove the stat structure and add guards

	* src/lib/dlfcn/dlfcn.c:
	include limits.h also for the cegcc compiler

2008-03-23  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	add POSIX definitions

	* src/lib/evil.c:
	make realpath available with cegcc. The function
	just copy the file name to the resolved name with
	that compiler

2008-03-13  Vincent Torri  <doursse at users dot sf dot net>

	* INSTALL:
	* README:
	additional notes for compilations with cegcc or mingw32ce

	* configure.ac:
	use 'win32' instead of 'cegcc' or 'mingw'

	* src/lib/dlfcn/dlfcn.c (dlopen):